Update Settings “global-settings”

--- a/data/globalSettings.json
+++ b/data/globalSettings.json
@@ -4,9 +4,9 @@
   "phone": "+46 220 300 01",
   "email": "info@mtcpowdersolutions.com",
   "visiting_address": {
-    "street": "Returgatan 1",
-    "zip_code": "SE-735 31",
-    "city": "Surahammar",
+    "street": "Eriksbergvägen 1",
+    "zip_code": "SE-734 92",
+    "city": "Hallstahammar",
     "country": "SWEDEN"
   },
   "socials": [
